[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "1.2.0"
chacha20 = "0.9.0"
zstd = "0.11.2+zstd.1.5.2"
thiserror = ">=1.0.32"
rand_core = "0.5.0"
getrandom = "0.2"
lazy_static = ">=1.4"